--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -193,6 +193,12 @@
     <ClCompile Include="AddRotatingGearAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="CopyAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="CutAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -314,6 +320,12 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="AddRotatingGearAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="CopyAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="CutAction.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
