--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -202,6 +202,9 @@
     <ClCompile Include="PasteAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="DeleteAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -332,6 +335,9 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="PasteAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="DeleteAction.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
