--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -205,6 +205,12 @@
     <ClCompile Include="DeleteAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="AddWaterPitAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="AddDangerZoneAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -338,6 +344,12 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="DeleteAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="AddWaterPitAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="AddDangerZoneAction.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
