--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -211,6 +211,9 @@
     <ClCompile Include="AddDangerZoneAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="AddAntennaAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -350,6 +353,9 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="AddDangerZoneAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="AddAntennaAction.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
