--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -214,6 +214,9 @@
     <ClCompile Include="AddAntennaAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="AddWorkshopAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -356,6 +359,9 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="AddAntennaAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="AddWorkshopAction.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
