Add Save functionality to GameObjects and implement SaveGridAction (doen't work)

--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -217,6 +217,7 @@
     <ClCompile Include="AddWorkshopAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="SaveGridAction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -364,5 +365,6 @@
     <ClInclude Include="AddWorkshopAction.h">
       <Filter>Actions</Filter>
     </ClInclude>
+    <ClInclude Include="SaveGridAction.h" />
   </ItemGroup>
 </Project>
