--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RotatingGear.cpp" />
+    <ClCompile Include="SaveGridAction.cpp" />
     <ClCompile Include="WaterPit.cpp" />
     <ClCompile Include="Workshop.cpp" />
   </ItemGroup>
@@ -240,6 +241,7 @@
     <ClInclude Include="PasteAction.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="RotatingGear.h" />
+    <ClInclude Include="SaveGridAction.h" />
     <ClInclude Include="UI_Info.h" />
     <ClInclude Include="WaterPit.h" />
     <ClInclude Include="Workshop.h" />
