--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -220,6 +220,9 @@
     <ClCompile Include="SaveGridAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="LoadAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -368,6 +371,9 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="SaveGridAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="LoadAction.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
