rotating gear_flag_waterpit_dangerzone_antenna

--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -322,9 +322,6 @@
     <ClInclude Include="WaterPit.h">
       <Filter>GameObjects</Filter>
     </ClInclude>
-    <ClInclude Include="DangerZone.h">
-      <Filter>GameObjects</Filter>
-    </ClInclude>
     <ClInclude Include="Workshop.h">
       <Filter>GameObjects</Filter>
     </ClInclude>
@@ -363,6 +360,9 @@
     </ClInclude>
     <ClInclude Include="AddWorkshopAction.h">
       <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="DangerZone.h">
+      <Filter>CMUgraphicsLib</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
