--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,18 @@
 {
-    "files.associations": {
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "xmemory": "cpp",
-        "xstring": "cpp",
-        "xtr1common": "cpp",
-        "xutility": "cpp",
-        "iosfwd": "cpp",
-        "fstream": "cpp",
-        "xlocmes": "cpp",
-        "ostream": "cpp",
-        "xiosbase": "cpp",
-        "string": "cpp"
-    }
+  "files.associations": {
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "xmemory": "cpp",
+    "xstring": "cpp",
+    "xtr1common": "cpp",
+    "xutility": "cpp",
+    "iosfwd": "cpp",
+    "fstream": "cpp",
+    "xlocmes": "cpp",
+    "ostream": "cpp",
+    "xiosbase": "cpp",
+    "string": "cpp",
+    "format": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
