--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="PasteAction.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="RebootRepair.cpp" />
     <ClCompile Include="RotatingGear.cpp" />
     <ClCompile Include="SaveGridAction.cpp" />
     <ClCompile Include="SelectMovement.cpp" />
@@ -248,6 +249,7 @@
     <ClInclude Include="Output.h" />
     <ClInclude Include="PasteAction.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="RebootRepair.h" />
     <ClInclude Include="RotatingGear.h" />
     <ClInclude Include="SaveGridAction.h" />
     <ClInclude Include="SelectMovement.h" />
