--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -185,12 +185,14 @@
     <ClCompile Include="Flag.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="hackdevice.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="LoadAction.cpp" />
     <ClCompile Include="Output.cpp" />
     <ClCompile Include="PasteAction.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="RebootRepair.cpp" />
     <ClCompile Include="RotatingGear.cpp" />
     <ClCompile Include="SaveGridAction.cpp" />
     <ClCompile Include="SelectMovement.cpp" />
@@ -243,11 +245,13 @@
     <ClInclude Include="Flag.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Grid.h" />
+    <ClInclude Include="hackdevice.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="LoadAction.h" />
     <ClInclude Include="Output.h" />
     <ClInclude Include="PasteAction.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="RebootRepair.h" />
     <ClInclude Include="RotatingGear.h" />
     <ClInclude Include="SaveGridAction.h" />
     <ClInclude Include="SelectMovement.h" />
