--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -19,11 +19,11 @@
     <Filter Include="Grid">
       <UniqueIdentifier>{0812da86-d7b1-4314-a6f2-b14accc8e412}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GameObjects">
-      <UniqueIdentifier>{c61abd84-e3da-41ae-a86c-6d797be2f1dc}</UniqueIdentifier>
-    </Filter>
     <Filter Include="GUIClasses">
       <UniqueIdentifier>{03fd4e0d-92e0-4271-bb9b-d6e9f21ec35f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObjects">
+      <UniqueIdentifier>{c61abd84-e3da-41ae-a86c-6d797be2f1dc}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -235,11 +235,17 @@
     <ClCompile Include="SelectMovement.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
-    <ClCompile Include="hackdevice.cpp" />
     <ClCompile Include="RebootRepair.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
     <ClCompile Include="ShootingPhase.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="Rounds.cpp" />
+    <ClCompile Include="hackdevice.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="UseConsumable.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
   </ItemGroup>
@@ -407,11 +413,17 @@
     <ClInclude Include="SelectMovement.h">
       <Filter>Actions</Filter>
     </ClInclude>
-    <ClInclude Include="hackdevice.h" />
     <ClInclude Include="RebootRepair.h">
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="ShootingPhase.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="Rounds.h" />
+    <ClInclude Include="hackdevice.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="UseConsumable.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
